--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
 	"name": "NodejsStarterApp",
 	"version": "0.0.1",
-	"description": "A sample nodejs app for Bluemix",
+	"description": "A sample nodejs app for Bluemix AutoScaling Agent",
 	"scripts": {
-		"start": "node --max-old-space-size=600 testAgent.js"
+		"start": "node --max-old-space-size=380 testAgent.js"
 	},
 	"dependencies": {
-		"autoscalingagent": "file:node_modulesxx/autoscalingagent"
+		"bluemix-autoscaling-agent": "*"
 	},
 	"repository": {},
-	"engines": {
-		"node": "0.12.x"
-	} 
+	"engines":{"node": "6.x"}
 }
